# ethernet_bridge

./: README.md  package.xml
ethernet_bridge/: CMakeLists.txt  package.xml
ethernet_bridge/src/file_sink/: main.cpp  node.cpp  node.h
ethernet_bridge/src/redirector/: main.cpp  node.cpp  node.h
ethernet_bridge/src/tcp_client/: main.cpp  node.cpp  node.h
ethernet_bridge/src/udp/: main.cpp  node.cpp  node.h
ethernet_bridge/src/udp_bundler/: main.cpp  node.cpp  node.h
ethernet_msgs/: CMakeLists.txt  README.md  package.xml
ethernet_msgs/include/ethernet_msgs/: utils.h  utils.hpp
ethernet_msgs/msg/: Event.msg  EventType.msg  GenericPacket.msg  Packet.msg  Packets.msg  ProtocolType.msg
src/udp/: node.cpp  node.h
