<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ethernet_bridge</name>
  <version>1.0.0</version>
  <description>Ethernet Bridges</description>
  <author>Philipp Berthold</author>
  <maintainer email="philipp.berthold@unibw.de">phbe</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>ethernet_msgs</depend>
  <depend>libros2qt</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
