<?xml version="1.0"?>
<package format="2">
  <name>ethernet_msgs</name>
  <version>1.0.0</version>
  <description>Ethernet Messages</description>
  <author>Philipp Berthold</author>
  <maintainer email="philipp.berthold@unibw.de">phbe</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>

</package>
